--- a/index.html
+++ b/index.html
@@ -192,21 +192,23 @@
               tabindex="0"
             >
               <div class="bg-white mx-5 mb-5 tiw">
-                <h1 class="px-5 text-black fw-bold py-5">
+                <h1 class="px-xl-5 text-black fw-bold py-5">
                   Get in the driver’s seat and get paid
                 </h1>
-                <p class="px-5 text-black">
+                <p class="px-xl-5 text-black">
                   Drive on the platform with the largest network of active
                   riders.
                 </p>
-                <div class="d-flex d-xl-block">
+                <div class="d-sm-flex d-xl-block">
                   <div>
-                    <a class="btn text-white bg-black mx-5 text-center my-3"
+                    <a
+                      class="btn text-white bg-black mx-xl-5 text-center my-sm-3"
                       >Sign up and drive</a
                     >
                   </div>
                   <div>
-                    <a class="btn text-black mx-5 text-start mt-3 mb-4 ps-0"
+                    <a
+                      class="btn text-black mx-xl-5 text-start mt-3 mb-xl-4 ps-0 ms-sm-4"
                       >Learn more about driving and delivering</a
                     >
                   </div>
@@ -411,8 +413,8 @@
               >
             </p>
           </div>
-          <div>
-            <ul class="list-unstyled">
+          <div class="row">
+            <ul class="list-unstyled col-sm-4 col-xl-3">
               <li class="h5">Company</li>
               <li class="mb-2">
                 <a href="#" class="text-decoration-none text-white">About us</a>
@@ -437,11 +439,94 @@
               <li class="mb-2">
                 <a href="#" class="text-decoration-none text-white">AI</a>
               </li>
-              <li class="mb-2">
+              <li class="mb-5">
                 <a href="#" class="text-decoration-none text-white"
                   >Gift cards</a
                 >
               </li>
+            </ul>
+            <ul class="list-unstyled col-sm-4 col-xl-3">
+              <li class="h5">Products</li>
+              <li class="mb-2">
+                <a href="#" class="text-decoration-none text-white">Ride</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-decoration-none text-white">Drive</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-decoration-none text-white">Deliver</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-decoration-none text-white">Eat</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-decoration-none text-white"
+                  >Uber for Business</a
+                >
+              </li>
+              <li class="mb-5">
+                <a href="#" class="text-decoration-none text-white"
+                  >Uber Freight</a
+                >
+              </li>
+            </ul>
+            <ul class="list-unstyled col-xl-3">
+              <li class="h5">Global citizenship</li>
+              <li class="mb-2">
+                <a href="#" class="text-decoration-none text-white">Safety</a>
+              </li>
+              <li class="mb-5">
+                <a href="#" class="text-decoration-none text-white"
+                  >Diversity and Inclusion</a
+                >
+              </li>
+            </ul>
+            <ul class="list-unstyled col-xl-3">
+              <li class="h5">Travel</li>
+              <li class="mb-2">
+                <a href="#" class="text-decoration-none text-white">Airports</a>
+              </li>
+              <li class="mb-5">
+                <a href="#" class="text-decoration-none text-white">Cities</a>
+              </li>
+            </ul>
+          </div>
+          <div class="row d-xl-flex justify-content-between align-items-center">
+            <ul
+              class="d-flex justify-content-between list-unstyled h5 gap-5 col-xl-6 col-3"
+            >
+              <li>
+                <a href="#" class="text-decoration-none text-white"
+                  ><i class="fa-brands fa-square-facebook"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-white"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-white"
+                  ><i class="fa-brands fa-youtube"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-white"
+                  ><i class="fa-brands fa-linkedin"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="text-decoration-none text-white"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
+            </ul>
+
+            <ul
+              class="d-flex flex-column flex-xl-row align-items-start col-xl-3"
+            >
+              <li class="btn text-white">English</li>
+              <li class="btn text-white">Abuja</li>
             </ul>
           </div>
         </div>
